--- a/circle.yml
+++ b/circle.yml
@@ -2,9 +2,8 @@ dependencies:
   pre:
     - |
         if [ ! -x ~/nim/bin/nim ]; then
-          sudo apt-get install gcc
-          git clone -b devel --depth 1 git://github.com/araq/nim ~/nim/
-          git clone -b devel --depth 1 git://github.com/nim-lang/csources ~/nim/csources/
+          git clone -b master --depth 1 git://github.com/araq/nim ~/nim/
+          git clone -b master --depth 1 git://github.com/nim-lang/csources ~/nim/csources/
           cd ~/nim/csources; sh build.sh; cd ..
           rm -rf csources
           bin/nim c koch
