--- a/.travis.yml
+++ b/.travis.yml
@@ -1,40 +1,38 @@
 language: c
-before_install:
-  - |
-    if [ "$TRAVIS_BRANCH" = master ]; then
-        export branch=master
-    else
-        export branch=devel
-    fi
+env:
+  - nim_branch=master
+  - nim_branch=devel
+matrix:
+  allow_failures:
+    - env: nim_branch=devel
+  fast_finish: true
 install:
   - |
-    if [ ! -x nim-$branch/bin/nim ]; then
-      git clone -b $branch --depth 1 git://github.com/nim-lang/nim nim-$branch/
-      cd nim-$branch
-      git clone -b $branch --depth 1 git://github.com/nim-lang/csources csources/
+    if [ ! -x nim-$nim_branch/bin/nim ]; then
+      git clone -b $nim_branch --depth 1 git://github.com/nim-lang/nim nim-$nim_branch/
+      cd nim-$nim_branch
+      git clone --depth 1 git://github.com/nim-lang/csources csources/
       cd csources
       sh build.sh
       cd ..
       rm -rf csources
       bin/nim c koch
       ./koch boot -d:release
-      cd ..
     else
-      cd nim-$branch
+      cd nim-$nim_branch
       git fetch origin
       if ! git merge FETCH_HEAD | grep "Already up-to-date"; then
         bin/nim c koch
         ./koch boot -d:release
       fi
-      cd ..
     fi
+    cd ..
 before_script:
-  - export PATH=nim-$branch/bin:$PATH
+  - export PATH="nim-$nim_branch/bin${PATH:+:$PATH}"
 script:
   - nim compile --verbosity:0 --run test/test
 cache:
   directories:
     - nim-master
     - nim-devel
-sudo: required
 dist: trusty
